--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title> Eric's Project Page </title>
   </head>
   <body>
+  	<h1> Hello, Code School!</h1>
+
+  	<ul>
+  		<li> Java Script </li>
+  		<li> Jquery </li>
+  	</ul>
+  	
 
   </body>
 </html>
